# Credit-Risk

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/internal_docs/: data_dictionary.md  dataset_acronyms.md  structure.md
notebooks/: 01_eda.ipynb
